--- a/ContactFrom_v5/css/main.css
+++ b/ContactFrom_v5/css/main.css
@@ -144,6 +144,24 @@ textarea:-moz-placeholder { color: #adadad;}
 textarea::-moz-placeholder { color: #adadad;}
 textarea:-ms-input-placeholder { color: #adadad;}
 
+.loader {
+  position: fixed;
+  display: block;
+  z-index: 9999;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+img.logo {
+  position:relative;
+  max-width:80%;
+  max-height:80%;
+  margin-top:-40%;
+  margin-left:-40%;
+}
+
 /*---------------------------------------------*/
 button {
 	outline: none !important;
@@ -542,6 +560,14 @@ footer {
 .img-footer {
   margin: auto;
   width: 200px;
+}
+.text-footer > p > a {
+  color: white; 
+  text-decoration: none;
+}
+
+.text-footer > p > a:hover {
+  color:rgba(46, 144, 255, 0.829)
 }
 
 @media (max-width: 576px) {
